maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:39: error: value unary_! is not a member of Unit
          if (!aMurSud(x, y))
              ^ShortestPathMaze:42: error: value unary_! is not a member of Unit
          if (!aMurEst(x, y))
              ^ShortestPathMaze:56: warning: enclosing method aMurEst has result type Unit: return value discarded
    return x == l || aMurOuest(x+1, y)
    ^ShortestPathMaze:61: warning: enclosing method aMurSud has result type Unit: return value discarded
    return y == 0 || aMurNord(x, y-1)
    ^